<resources>
    <string name="app_name">SecureMessenger</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="otp">OTP</string>
    <string name="type_a_message">Type a message</string>
    <string name="submit_otp">Submit Otp</string>
    <string name="status">Status</string>
    <string name="time">Time</string>
    <string name="signup">Signup</string>
    <string name="datetime">Datetime</string>
    <string name="count">Count</string>
    <string name="test">TEST</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="logout">Logout</string>
    <string name="block">Block</string>
    <string name="un_block">Un-Block</string>
    <string name="person">Person</string>
    <string name="last_seen">last_seen</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading...</string>
    <string name="todo">TODO</string>
    <string name="duration">duration</string>
    <string name="search">Search</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="date">Date</string>
    <string name="refresh">Refresh</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="secure_conversations">Secure conversations</string>
    <string name="private_inbox_subtitle">Encrypted chats, voice notes, and presence updates in one place.</string>
    <string name="search_conversations">Search conversations</string>
    <string name="secure_message_hint">Type a secure message</string>
    <string name="voice_note_ready_title">Voice note ready</string>
    <string name="voice_note_ready_hint">Tap play to listen or scrub the waveform.</string>
    <string name="encrypted_voice_note">Encrypted voice note</string>
    <string name="download_voice_message">Download</string>
    <string name="download_voice_message_hint">Download only when you are ready to decrypt it on this device.</string>
    <string name="downloading_voice_message">Decrypting…</string>
    <string name="voice_note_not_downloaded">Awaiting download</string>
    <string name="voice_message_download_failed">Unable to prepare this voice note.</string>
    <string name="voice_message_not_ready">Download the voice note before playing it.</string>
    <string name="hold_to_record">Hold to record</string>
    <string name="unread_messages">Unread messages</string>
    <string name="login_tagline">Private messaging with end-to-end encryption.</string>
    <string name="phone_number">Phone number</string>
    <string name="secure_voice_note">Secure voice note</string>
</resources>
