<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/send_text"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        android:paddingTop="12dp"
        android:paddingBottom="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/sentMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="260dp"
            android:text="@string/this_is_sent_message"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/status"
                android:textColor="@color/text_secondary"
                android:textSize="10sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/text_secondary"
                android:textSize="10sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
