<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secure_conversations"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_semibold" />

    <TextView
        android:id="@+id/contactSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactTitle"
        android:layout_marginTop="4dp"
        android:text="@string/private_inbox_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactSubtitle"
        android:layout_marginTop="18dp"
        android:background="@drawable/surface_card"
        android:iconifiedByDefault="false"
        android:paddingHorizontal="8dp"
        app:queryHint="@string/search_conversations" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchView"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="12dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/user_layout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress_bg"
        android:visibility="invisible" />

</RelativeLayout>
