<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    android:paddingHorizontal="20dp"
    android:paddingTop="48dp"
    android:paddingBottom="24dp"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/loginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_semibold" />

    <TextView
        android:id="@+id/loginSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginHeading"
        android:layout_marginTop="6dp"
        android:text="@string/login_tagline"
        android:textColor="@color/text_secondary"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_regular" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/messages_background"
        android:paddingHorizontal="20dp"
        android:paddingTop="28dp"
        android:paddingBottom="28dp">

        <LinearLayout
            android:id="@+id/button_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/slider_button_bg"
            android:elevation="10dp"
            android:gravity="top">

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_capsule"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/inactive_button"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_toggle"
            android:layout_marginTop="28dp"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginLabel"
            android:layout_marginTop="8dp"
            android:background="@drawable/surface_card"
            android:labelFor="@+id/phoneNumber"
            app:placeholderText="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:inputType="phone"
                android:paddingHorizontal="8dp"
                android:paddingVertical="14dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="@color/text_muted" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            style="@style/MyCustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNumberLayout"
            android:layout_marginTop="24dp"
            android:elevation="10dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>
